# TinySwarm

./: CMakeLists.txt  ManagerECTD.cpp  ManagerECTD.h  README.md  close.sh  logs.txt  memories.md  run.py  run.sh  setting.json
Common/: Closure.h  DynamicGenerator.h  HTTPData.cpp  HTTPData.h  HTTPParser.h  IPAddress.cpp  IPAddress.h  MsgPack.pb.cc  MsgPack.pb.h  RPCServer.cpp  RPCServer.h  RpcClient.h  RpcClientChannel.h  RpcClientController.h  RpcResult.h  Session.h  socket.h
LogUtils/: LoggerControl.cpp  LoggerControl.h  Logging.h
MapReduce/: AddressPool.cpp  AddressPool.h  CMakeLists.txt  ManagerClient.cpp  ManagerClient.h  ManagerSession.cpp  ManagerSession.h  MapReduce.cpp  MapReduce.h  MapReduceTask.cpp  MapReduceTask.h  Mongo.cpp  Mongo.h  MongoImg.cpp  MongoImg.h  RpcClient.h  YoloInfer.pb.cc  YoloInfer.pb.h  YoloInfer.proto  main.cpp
Services/: WorkerExit
Services/deadloop/: deadloop  deadloop.sh
Services/hello/: 127.0.0.1_16611518200  hello.sh
Services/hello1/: hello1  hello1.sh
Services/print_argv/: 0_16592851080  0_16592865690  print_argv  print_argv.sh
Services/redis/: 127.0.0.1_16615124650
TCPServer/: Acceptor.cpp  Acceptor.h  Buffer.h  CMakeLists.txt  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  Poller.cpp  Poller.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h
Yolo/: CMakeLists.txt  RpcInterface.cpp  RpcInterface.h  YoloInfer.pb.cc  YoloInfer.pb.h  main.cpp
docs/: _error_reporter_8h_source.html  _ipvs_proxy_8h_source.html  _live_probe_8h_source.html  _lock_free_queue_8h_source.html  _log_queue_8h_source.html  _logger_control_8h_source.html  _logging_8h_source.html  _manager_8h_source.html  _manager_descriptor_8h_source.html  _manager_e_c_t_d_8h_source.html  _mongo_8h_source.html  _nginx_proxy_8h_source.html  _no_proxy_8h_source.html  _pod_recorder_8h_source.html  _pod_start_recorder_8h_source.html  _proxy_8h_source.html  _proxy_exception_8h_source.html  _publisher_8h_source.html  _register_8h_source.html  _result_8h_source.html  _scheduler_8h_source.html  _service_descriptor_8h_source.html  _service_manager_8h_source.html  _worker_client_8h_source.html  _worker_descriptor_8h_source.html  _worker_error_8h_source.html  _worker_node_8h_source.html  _worker_rpc_interface_8pb_8h_source.html  _worker_status_8h_source.html  annotated.html  class_check_input-members.html  class_check_input.html  class_check_input_1_1___internal.html  class_down_service-members.html  class_down_service.html  class_down_service_1_1___internal.html  class_down_services-members.html  class_down_services.html  class_down_services_1_1___internal.html  class_echo-members.html  (+154 more)
docs/search/: all_0.js  all_11.js  all_12.js  all_2.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+10 more)
logUtils/: LoggerControl.cpp  LoggerControl.h
manager/: CMakeLists.txt  Closure.h  CreateResult.h  GroupManager.h  LogQueue.cpp  LogQueue.h  MRManager.cpp  MRManager.h  Manager.cpp  Manager.h  ManagerECTD.h  ManagerError.h  ManagerRpcInterface.pb.cc  ManagerRpcInterface.pb.h  ManagerRpcInterface.proto  PodDescriptor.cpp  PodDescriptor.h  RPCInterface.cpp  RPCInterface.h  Result.h  RpcSession.cpp  RpcSession.h  Scheduler.h  ServiceDescriptor.h  ServiceImplInfo.h  ServiceManager.cpp  ServiceManager.h  WorkerClient.h  WorkerDescriptor.h  main.cpp
manager/Gossip/: CMakeLists.txt
manager/Gossip/Common/: CommonParams.h  CommonStruct.h  HTTPData.cpp  HTTPParser.cpp  HTTPParser.h  IPAddress.h  socket_util.h
manager/Gossip/properties/: Dockerfile  Dockerfile.backup  GossipNodes  log4cxx.properties  log4cxx1.properties  test.proto
manager/Gossip/src/: Buffer.cpp  Buffer.h  GossipNode.cpp  GossipNode.h  GossipValueTable.cpp  GossipValueTable.h  IOHandler.cpp  IOHandler.h  Poller.cpp  Poller.h  RedisGossipTable.cpp  RedisGossipTable.h  UserCommandTable.cpp  UserCommandTable.h  UserInterface.cpp  UserInterface.h  main.cpp
manager/Proxy/: IpvsProxy.cpp  IpvsProxy.h  NginxProxy.cpp  NginxProxy.h  NoProxy.h  Proxy.cpp  Proxy.h  ProxyException.h
manager/Publisher/: Publisher.cpp  Publisher.h  ServiceManager.h
manager/Scheduler/: Scheduler.h
manager/protos/: ManagerRpcInterface.pb.cc  ManagerRpcInterface.pb.h  ManagerRpcInterface.proto  WorkerRpcInterface.pb.cc  WorkerRpcInterface.pb.h
properties/: MsgPack.proto  manager.properties
worker/: CMakeLists.txt  ErrorReporter.cpp  ErrorReporter.h  LiveProbe.h  ManagerDescriptor.h  Mongo.h  PodDescriptor.cpp  PodDescriptor.h  PodRecorder.cpp  PodRecorder.h  RPCInterface.cpp  RPCInterface.h  Register.cpp  Register.h  WorkerError.h  WorkerNode.cpp  WorkerNode.h  WorkerRpcInterface.pb.cc  WorkerRpcInterface.pb.h  WorkerRpcInterface.proto  WorkerStatus.cpp  WorkerStatus.h  main.cpp  memo.md
worker/probe/: LiveProbe.h
worker/recorder/: PodStartRecorder.cpp  PodStartRecorder.h
worker/register/: Register.cpp  Register.h
worker/util/: LockFreeQueue.h
